WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134477
[iOS][WK2] The long press gesture recognizers should not block the pinch gesture
https://bugs.webkit.org/show_bug.cgi?id=134477
Summary
[iOS][WK2] The long press gesture recognizers should not block the pinch gesture
Benjamin Poulain
Reported
2014-06-30 18:05:05 PDT
[iOS][WK2] The long press gesture recognizers should not block the pinch gesture
Attachments
Patch
(2.35 KB, patch)
2014-06-30 18:05 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-06-30 18:05:21 PDT
Created
attachment 234131
[details]
Patch
Benjamin Poulain
Comment 2
2014-06-30 20:12:39 PDT
Comment on
attachment 234131
[details]
Patch Clearing flags on attachment: 234131 Committed
r170629
: <
http://trac.webkit.org/changeset/170629
>
Benjamin Poulain
Comment 3
2014-06-30 20:12:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug