[iOS][WK2] The long press gesture recognizers should not block the pinch gesture https://bugs.webkit.org/show_bug.cgi?id=134477 <rdar://problem/17514936>

Reviewed by Tim Horton.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView gestureRecognizer:canPreventGestureRecognizer:]):


Canonical link: https://commits.webkit.org/152460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170629 268f45cc-cd09-0410-ab3c-d52691b4dbfc